// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONSchemaViewer - JSON Pointer test Array Properties - like /prefixItems/3 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          array
        </span>
        <ul>
          <li
            data-level="1"
            id="/prefixItems/0"
          >
            <details>
              <summary>
                <code>
                  items[0]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  number
                </span>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    number
                  </span>
                  <div />
                </div>
              </div>
            </details>
          </li>
          <li
            data-level="1"
            id="/prefixItems/1"
          >
            <details>
              <summary>
                <code>
                  items[1]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  string
                </span>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    string
                  </span>
                  <div />
                </div>
              </div>
            </details>
          </li>
          <li
            data-level="1"
            id="/prefixItems/2"
          >
            <details>
              <summary>
                <code>
                  items[2]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  string
                </span>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    string
                  </span>
                  <div>
                    <div>
                      <strong>
                        Possible values :
                      </strong>
                       
                      <ul>
                        <li>
                          <code>
                            Street
                          </code>
                        </li>
                        <li>
                          <code>
                            Avenue
                          </code>
                        </li>
                        <li>
                          <code>
                            Boulevard
                          </code>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </details>
          </li>
          <li
            data-level="1"
            id="/prefixItems/3"
          >
            <details>
              <summary>
                <code>
                  items[3]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  string
                </span>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    string
                  </span>
                  <div>
                    <div>
                      <strong>
                        Possible values :
                      </strong>
                       
                      <ul>
                        <li>
                          <code>
                            NW
                          </code>
                        </li>
                        <li>
                          <code>
                            NE
                          </code>
                        </li>
                        <li>
                          <code>
                            SW
                          </code>
                        </li>
                        <li>
                          <code>
                            SE
                          </code>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </details>
          </li>
        </ul>
        <div />
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - JSON Pointer test Escaped attribute - like country/state should give /properties/country~1state 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          object
        </span>
        <ul>
          <li
            data-level="1"
            id="/properties/state"
          >
            <details>
              <summary>
                <strong>
                  state
                </strong>
                 
                <span
                  style="opacity: 0.6;"
                >
                  any
                </span>
                 
                <strong>
                  required
                </strong>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    any
                  </span>
                  <div>
                    Always valid
                  </div>
                </div>
              </div>
            </details>
          </li>
        </ul>
        <ul>
          <li
            data-level="1"
            id="/properties/street_address"
          >
            <details>
              <summary>
                <strong>
                  street_address
                </strong>
                 
                <span
                  style="opacity: 0.6;"
                >
                  string
                </span>
                 
                <strong>
                  required
                </strong>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    string
                  </span>
                  <div />
                </div>
              </div>
            </details>
          </li>
          <li
            data-level="1"
            id="/properties/city"
          >
            <details>
              <summary>
                <strong>
                  city
                </strong>
                 
                <span
                  style="opacity: 0.6;"
                >
                  string
                </span>
                 
                <strong>
                  required
                </strong>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    string
                  </span>
                  <div />
                </div>
              </div>
            </details>
          </li>
          <li
            data-level="1"
            id="/properties/country~1state"
          >
            <details>
              <summary>
                <strong>
                  country/state
                </strong>
                 
                <span
                  style="opacity: 0.6;"
                >
                  string
                </span>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    string
                  </span>
                  <div />
                </div>
              </div>
            </details>
          </li>
        </ul>
        <div />
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - JSON Pointer test Object properties - like street_address 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          object
        </span>
        <ul>
          <li
            data-level="1"
            id="/properties/street_address"
          >
            <details>
              <summary>
                <strong>
                  street_address
                </strong>
                 
                <span
                  style="opacity: 0.6;"
                >
                  string
                </span>
                 
                <strong>
                  required
                </strong>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    string
                  </span>
                  <div />
                </div>
              </div>
            </details>
          </li>
          <li
            data-level="1"
            id="/properties/city"
          >
            <details>
              <summary>
                <strong>
                  city
                </strong>
                 
                <span
                  style="opacity: 0.6;"
                >
                  string
                </span>
                 
                <strong>
                  required
                </strong>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    string
                  </span>
                  <div />
                </div>
              </div>
            </details>
          </li>
          <li
            data-level="1"
            id="/properties/state"
          >
            <details>
              <summary>
                <strong>
                  state
                </strong>
                 
                <span
                  style="opacity: 0.6;"
                >
                  string
                </span>
                 
                <strong>
                  required
                </strong>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    string
                  </span>
                  <div />
                </div>
              </div>
            </details>
          </li>
        </ul>
        <div />
      </div>
    </div>
  </details>
</DocumentFragment>
`;
